tests/ui/issues/issue-13466.stderr
error[E0308]: mismatched types
  --> $DIR/issue-13466.rs:8:9
   |
LL |     let _x: usize = match Some(1) {
   |                           ------- this expression has type `Option<{integer}>`
LL |         Ok(u) => u,
   |         ^^^^^ expected `Option<{integer}>`, found `Result<_, _>`
   |
   = note: expected enum `Option<{integer}>`
              found enum `Result<_, _>`

error[E0308]: mismatched types
  --> $DIR/issue-13466.rs:14:9
   |
LL |     let _x: usize = match Some(1) {
   |                           ------- this expression has type `Option<{integer}>`
...
LL |         Err(e) => panic!(e)
   |         ^^^^^^ expected `Option<{integer}>`, found `Result<_, _>`
   |
   = note: expected enum `Option<{integer}>`
              found enum `Result<_, _>`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
